<resources>
    <string name="app_name" translatable="false">Game Master Journal</string>
    <string name="deletenpc">Delete NPC</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noitem">There is no item to delete</string>
    <string name="areyou">Are you sure you want to delete this item?</string>
    <string name="pleasenpc">Please provide a name for your NPC</string>
    <string name="nolocation">No Location</string>
    <string name="npcexists">An NPC with that name already exists. Update existing NPC with current info?</string>
    <string name="npcsaved">NPC Saved</string>
    <string name="error">Error with entry</string>
    <string name="changevoice">Change voice</string>
    <string name="citydetails">City Details</string>
    <string name="cityname">City Name</string>
    <string name="environment">Environment</string>
    <string name="pop">Population</string>
    <string name="eco">Economy</string>
    <string name="viewlocations">View Buildings/Locations/Features</string>
    <string name="viewtravel">View Travel Time</string>
    <string name="citynotes">City Notes</string>
    <string name="savechanges">Save Changes</string>
    <string name="addentry">Add Entry</string>
    <string name="databases">Databases</string>
    <string name="deletenpcdata">Delete all NPCs </string>
    <string name="deletelocationdata">Delete all Locations</string>
    <string name="deletecitydata">Delete all Cities</string>
    <string name="deletedistancedata">Delete all Distances</string>
    <string name="deletelootdata">Delete all Loot</string>
    <string name="deletepresetdata">Delete all Presets</string>
    <string name="distance">Distance</string>
    <string name="traveltime">Travel time</string>
    <string name="locationdetails">Location Details</string>
    <string name="locationname">Location Name</string>
    <string name="desc">Description</string>
    <string name="addnotes">Additional Notes</string>
    <string name="locations">Locations</string>
    <string name="lootdetails">Loot Details</string>
    <string name="lootname">Name</string>
    <string name="lootrarity">Rarity</string>
    <string name="lootprice">Price</string>
    <string name="lootdesc">Description</string>
    <string name="lootfun">Function/Details/Usage</string>
    <string name="addimage">Add an image</string>
    <string name="npcdetails">NPC Details</string>
    <string name="npcname">NPC Name</string>
    <string name="descapp">Description/Appearance</string>
    <string name="plothooks">Plot Hooks</string>
    <string name="npcnotes">NPC Notes</string>
    <string name="addvoice">Add a voice</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="npcs">NPCs</string>
    <string name="presetlist">Preset List</string>
    <string name="custpreset">Custom preset value</string>
    <string name="deletecity">Delete City</string>
    <string name="edit">Edit</string>
    <string name="loc">"Location: "</string>
    <string name="lootrequirements">Loot Requirements</string>
    <string name="locationHeader">Location: </string>
    <string name="descriptionHeader">Description</string>
    <string name="plotHooksHeader">Plot Hooks</string>
    <string name="notesHeader">Other Notes</string>
    <string name="voiceHeader">Reference Voice</string>
    <string name="noteableLocations">Notable Locations</string>
    <string name="detailHeader">Details</string>
    <string name="economyHeader">Economy:</string>
    <string name="travelTimeHeader">Travel Times to… </string>
    <string name="locationTitle">"Locations within"</string>
    <string name="location">Location</string>
    <string name="race">Race</string>
    <string name="raceHeader">"Race:"</string>
    <string name="npclisttitle">"NPCs in "</string>
    <string name="updateinfo">Would you like to update the existing entry with this info?</string>
    <string name="nonpctext">There are no NPCs yet</string>
    <string name="noloottext">There is no loot yet</string>
    <string name="nocitytext">There are no citites yet</string>
    <string name="nolocationtext">There are no locations yet</string>
    <string name="removeimage">Remove image</string>
    <string name="list">List</string>
    <string name="overview">Overview</string>
    <string name="notes">Notes</string>
    <string name="reset_all_presets">Reset all presets</string>
    <string name="cities">Cities</string>
    <string name="loot">Loot</string>
    <string name="managedb">Manage Databases</string>
    <string name="darkmode">Dark Mode</string>
    <string name="lightmode">Light Mode</string>
    <string name="traveltimefrom">Travel time from</string>
    <string name="attunement">Requires Attunement</string>
    <string name="add">Add</string>
    <string name="clearentry">Clear Entry</string>
    <string name="newpreset">Enter the name of the new</string>
    <string name="create">Create</string>
    <string name="namenewcity">Enter the name of the new city</string>
    <string name="createcity">Create City</string>
    <string name="cityalreadyexists">A city with this name already exists!</string>
    <string name="confirm">Confirm</string>
    <string name="newlocation">Add New Location</string>
    <string name="noitemtodelete">There is no item to delete</string>
    <string name="namefornpc">Please provide a name for your NPC</string>
    <string name="noaudiofile">No audio file found, please try again</string>
    <string name="permissionneeded">Permission needed</string>
    <string name="permissionreason">This permission is needed for you to add reference images for your NPC</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="citynotsaved">This city has not yet been saved. Please save all changes, and try again.</string>
    <string name="nameforcity">Please provide a name for your city</string>
    <string name="presetexists">This preset already exists!</string>
    <string name="enteravalue">Please enter a value!</string>
    <string name="areyousureitem">Are you sure you want to delete this item?</string>
    <string name="filterlocation">Filter by location:</string>
    <string name="clearfilter">Clear Filter</string>
    <string name="nosavedcity">There is no saved city with that name!</string>
    <string name="presstoexit">Press back again to exit.</string>
    <string name="itemsaved">Item saved</string>
    <string name="permissionreasonloot">This permission is needed for you to add reference images for your loot</string>
    <string name="citysaved">City saved</string>
    <string name="destination">Destination:</string>
    <string name="selectdestination">Please select your destination</string>
    <string name="providedistance">Please provide a distance</string>
    <string name="alreadyexists">This set already exists!</string>
    <string name="yousure">Are you sure you want to delete this item?</string>
    <string name="deletedistance">Successfully deleted all Distances</string>
    <string name="resetpreset">Successfully reset all Presets</string>
    <string name="deletelocation">Successfully deleted all Locations</string>
    <string name="deleteloot">Successfully deleted all Loot</string>
    <string name="yousurecity">Are you sure you want to delete this data? Deleting cities will also delete Locations and Distances for that city</string>
    <string name="deletecities">Successfully deleted all Cities</string>
    <string name="deletenpcs">Successfully deleted all NPCs</string>
    <string name="purchasedark">Support the developer! Purchase Dark Mode for USD 0.99.</string>
    <string name="permissiondb">This permission is needed to export your data to a csv file</string>
    <string name="envlabel">Environment: </string>
    <string name="poplabel">Population: </string>
    <string name="item_group">Item Group</string>
    <string name="group">Item Group</string>
    <string name="filtergroup">Filter by item group:</string>
    <string name="nogroup">No Group</string>
    <string name="itemgrouplabel">Item Group:</string>
    <string name="linked_npc">Linked NPCs</string>
    <string name="miscellaneous_info_4">Miscellaneous Info 4</string>
    <string name="miscellaneous_info_3">Miscellaneous Info 3</string>
    <string name="miscellaneous_info_2">Miscellaneous Info 2</string>
    <string name="miscellaneous_info_1">Miscellaneous Info 1</string>
    <string name="linked_city">Linked Cities</string>
    <string name="no_city">No City</string>
    <string name="no_npc">No NPC</string>
    <string name="linked_item">Linked Items</string>
    <string name="no_item">No Item</string>
    <string name="linked_item_group">Linked Item Group</string>
    <string name="no_item_group">No Item Group</string>
    <string name="miscellaneous_group">Miscellaneous Group</string>
    <string name="npc">NPC</string>
    <string name="city">City</string>
    <string name="item">Item</string>
    <string name="specificnpcexists">An NPC with this name already exists!</string>
    <string name="specificitemexists">An item with that name already exists!</string>
    <string name="nosaveditemgroup">There is no saved item group with that name!</string>
    <string name="nosavednpc">There is no saved NPC with that name!</string>
    <string name="add_a_linked_npc">Add a linked NPC</string>
    <string name="add_a_linked_city">Add a linked City</string>
    <string name="add_a_linked_item">Add a linked Item</string>
    <string name="nosavedgroup">There is no saved group with that name!</string>
    <string name="misc">Miscellaneous</string>
    <string name="filtergroup2">Filter by group:</string>
    <string name="noentrytext">There are no entries yet</string>
    <string name="miscdetails">Miscellaneous Details</string>
    <string name="delete_all_misc">Delete All Misc</string>
    <string name="export_misc">Export Misc</string>
    <string name="deleteall">Delete all</string>
    <string name="export">Export</string>
    <string name="presets">Presets</string>
    <string name="importy">Import</string>
    <string name="permissionneededdb">This permission is needed in order to properly import and export files</string>
    <string name="filtercity">Filter by city:</string>
    <string name="nocity">No city</string>
    <string name="selectLocation">Location:</string>
    <string name="placedetails">Place Details</string>
    <string name="placename">Place name</string>
    <string name="none">None</string>
    <string name="edittitle">Edit Title</string>
    <string name="colorchange">Edit Color</string>
    <string name="settings">Settings</string>
    <string name="entercolor">Enter a hex color value</string>
    <string name="editcolor">Edit color</string>
    <string name="enterheader">Enter a new title. This will apply everywhere this title is used.</string>
    <string name="editheader">Edit Title</string>
    <string name="reset">Reset Values</string>
    <string name="resetHeader">Reset values?</string>
    <string name="located">Located within:</string>
    <string name="editinfocolor">Edit infobox color</string>
    <string name="infocolorchange">Edit infobox color</string>
    <string name="unsaved">You have unsaved changes, would you like to save?</string>
    <string name="language">Language</string>
</resources>
