<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#80cee1"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/backarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/databases"
            android:paddingEnd="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/deleteNPC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="@string/deletenpcdata" />

    <Button
        android:id="@+id/deleteLocations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="@string/deletelocationdata" />

    <Button
        android:id="@+id/deleteCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="@string/deletecitydata" />

    <Button
        android:id="@+id/deleteDistances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="@string/deletedistancedata" />

    <Button
        android:id="@+id/deleteLoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="@string/deletelootdata" />

    <Button
        android:id="@+id/deletePresets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="@string/deletepresetdata" />

</android.support.v7.widget.LinearLayoutCompat>
