<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/mainBgColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_weight="0"
            android:src="@drawable/languageicon" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="@dimen/_220sdp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/_35sdp"
            android:textColor="#000000"
            android:fontFamily="@font/blackchance"/>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_weight="0"
            android:src="@drawable/settings" />

    </LinearLayout>

    <Button
        android:id="@+id/npcs"
        android:layout_width="@dimen/_195sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_22sdp"
        android:background="@drawable/rounded_titles1"
        android:text="@string/npcs"/>

    <Button
        android:id="@+id/cities"
        android:layout_width="@dimen/_195sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_22sdp"
        android:background="@drawable/rounded_titles2"
        android:text="@string/cities"/>

    <Button
        android:id="@+id/locations"
        android:layout_width="@dimen/_195sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_22sdp"
        android:background="@drawable/rounded_titles2"
        android:text="@string/locations"/>

    <Button
        android:id="@+id/loot"
        android:layout_width="@dimen/_195sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_22sdp"
        android:background="@drawable/rounded_titles3"
        android:text="@string/loot"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp">

        <Button
            android:id="@+id/misc"
            android:layout_width="@dimen/_195sdp"
            android:layout_height="@dimen/_45sdp"
            android:textSize="@dimen/_22sdp"
            android:background="@drawable/rounded_titles5"
            android:text="@string/misc"/>

    </LinearLayout>

    <Button
        android:id="@+id/databaseManagement"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/rounded_titles4"
        android:text="@string/managedb"
        android:textSize="@dimen/_11sdp"/>

    <Button
        android:id="@+id/themeSwitch"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/rounded_titles4"
        android:text="@string/darkmode"
        android:textSize="@dimen/_11sdp"/>

</android.support.v7.widget.LinearLayoutCompat>
