<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/npcLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/mainColor2">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/backarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationdetails"
            android:paddingEnd="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/locationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/info_bg2"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:padding="10dp"
        android:hint="@string/locationname" />

    <EditText
        android:id="@+id/locationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/info_bg2"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="10dp"
        android:hint="@string/desc" />

    <EditText
        android:id="@+id/locationPlotHooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/info_bg2"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="10dp"
        android:hint="@string/plothooks" />

    <EditText
        android:id="@+id/locationNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/info_bg2"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="10dp"
        android:hint="@string/addnotes" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/locationButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveLocation"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savechanges"
            android:padding="10dp"
            android:background="@drawable/buttonbg"/>

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>