<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/presetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/backarrow" />

        <TextView
            android:id="@+id/presetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="25dp"
            android:text="@string/presetlist"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <ListView
            android:id="@+id/presetListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/customPreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/custpreset"
        />

    <Button
        android:id="@+id/addEntry"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addentry"/>

</android.support.v7.widget.LinearLayoutCompat>